--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
       * {
           font-family: monospace;
+          color: green;
         }
       main {
         height: 100vh;
@@ -21,7 +22,8 @@
   </head>
   <body>
     <main>
-        <h1>Welcome! Ah, the website is still underconstruction and I am too lazy to finish it fast :v</h1>  
+        <h1>Welcome! Ah, the website is still underconstruction and I am too lazy to finish it fast :v</h1>
+        <h2>But atleast it's better than giving free ad service to my domain register</h2>
     </main>
   </body>
 </html>
