--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
 
     <style>
       * {
-          font-family: monospace;
-          color: green;
-        }
+        font-family: monospace;
+        color: green;
+      }
       main {
         height: 100vh;
         width: 100vw;
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-flow: column;
+        text-align: center;
+      }
+      h1, h2 {
+        margin: 0;
+      }
+      h2 {
+        margin-top: 10px;
       }
     </style>
   </head>
   <body>
     <main>
-        <h1>Welcome! Ah, the website is still underconstruction and I am too lazy to finish it fast :v</h1>
-        <br>
-        <h2>But atleast it's better than giving free ad service to my domain register</h2>
+        <h1>Welcome! Ah, the website is still under construction and I am too lazy to finish it fast :v</h1>
+        <h2>But at least it's better than giving free ad service to my domain registrar</h2>
     </main>
   </body>
 </html>
