new update, basic website

--- a/index.html
+++ b/index.html
@@ -1,37 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kiyopon</title>
 
-    <style>
-      * {
-        font-family: monospace;
-        color: green;
-      }
-      main {
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-flow: column;
-        text-align: center;
-      }
-      h1, h2 {
-        margin: 0;
-      }
-      h2 {
-        margin-top: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <main>
-        <h1>Welcome! Ah, the website is still under construction and I am too lazy to finish it fast :v</h1>
-        <h2>But at least it's better than giving free ad service to my domain registrar</h2>
-    </main>
-  </body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>kiyopon</title>
+
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <div class="main">
+        <h1>kiyo</h1>
+        <h2>
+            Hello, visitor! Welcome to my website. I am Kiyopon you can call me Kiyo
+        </h2>
+        <h2>
+            I am just a normal high school student. Started coding when I was 11
+            cause I love it. I know Python, Javascript, Typescript, Bash, Lua, Rust
+            ( Learning ) and HTML, CSS
+        </h2>
+        <h2>
+            I mainly make Websites ( Full Stack ), Discord Bots and Linux based
+            stuffs.
+        </h2>
+
+        <div class="button-box">
+            <button>
+                <a href="https://www.github.com/kiyoopoon" target="_blank">github</a>
+            </button>
+
+            <button>
+                <a href="mailto:kiyo@kiyo.codes" target="_blank">email</a>
+            </button>
+
+            <button>
+                <a href="https://discord.com/users/1014901022042357932" target="_blank">discord</a>
+            </button>
+        </div>
+    </div>
+
+    <footer>
+        <p>
+            This website is still not complete, I didn't get time to complete it
+            cause I am kind of busy currently but hopefully I will soon :>
+        </p>
+    </footer>
+
+    <script <source src="scripts.js">
+
+    </script>
+</body>
+
 </html>
